--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.79"
+bstr = "1.9.0"
+clap = { version = "4.5.0", features = ["derive", "color", "suggestions", "env"] }
+dotenv = "0.15.0"
+image = "0.24.8"
+indexmap = "2.2.3"
+libloading = "0.8.1"
+libretro-sys = "0.1.1"
+minifb = "0.25.0"
+strum = { version = "0.26.1", features = ["derive"] }
