--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,6 @@ indexmap = "2.2.3"
 libloading = "0.8.1"
 libretro-sys = "0.1.1"
 minifb = "0.25.0"
+rodio = { version = "0.17.3", default-features = false }
+rubato = "0.14.1"
 strum = { version = "0.26.1", features = ["derive"] }
