--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,14 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.79"
 bstr = "1.9.0"
-clap = { version = "4.5.0", features = ["derive", "color", "suggestions", "env"] }
+clap = { version = "4.5.0", features = [
+    "derive",
+    "color",
+    "suggestions",
+    "env",
+] }
 dotenv = "0.15.0"
+gilrs = { version = "0.10.4" }
 image = "0.24.8"
 indexmap = "2.2.3"
 libloading = "0.8.1"
