--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,6 @@ minifb = "0.25.0"
 rodio = { version = "0.17.3", default-features = false }
 rubato = "0.14.1"
 strum = { version = "0.26.1", features = ["derive"] }
+
+[target.'cfg(windows)'.build-dependencies]
+winres = "0.1.12"
