--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ clap = { version = "4.5.0", features = [
     "suggestions",
     "env",
 ] }
+custom_debug = "0.6.1"
 dotenv = "0.15.0"
 gilrs = { version = "0.10.4" }
 indexmap = "2.2.3"
