--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.79"
+atomicwrites = "0.4.3"
 bstr = "1.9.0"
 clap = { version = "4.5.0", features = [
     "derive",
