--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,8 @@ clap = { version = "4.5.0", features = [
 ] }
 custom_debug = "0.6.1"
 dotenv = "0.15.0"
-gilrs = { version = "0.10.4" }
+# xinput allows receiving input without window being focused
+gilrs = { version = "0.10.4", default-features = false, features = ["xinput"] }
 indexmap = "2.2.3"
 itertools = "0.12.1"
 libloading = "0.8.1"
