--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.79"
 atomicwrites = "0.4.3"
+base64 = "0.21.7"
 bstr = "1.9.0"
 clap = { version = "4.5.0", features = [
     "derive",
@@ -22,12 +23,16 @@ egui = "0.26.2"
 enumset = "1.1.3"
 # xinput allows receiving input without window being focused
 gilrs = { version = "0.10.4", default-features = false, features = ["xinput"] }
+hex = "0.4.3"
 indexmap = "2.2.3"
 itertools = "0.12.1"
 libloading = "0.8.1"
 libretro-sys = "0.1.1"
 parking_lot = "0.12.1"
 rodio = { version = "0.17.3", default-features = false }
+serde = { version = "1.0.197", features = ["derive"] }
+serde_json = "1.0.114"
+sha1 = "0.10.6"
 strum = { version = "0.26.1", features = ["derive"] }
 
 [target.'cfg(windows)'.build-dependencies]
