--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,11 +29,13 @@ itertools = "0.12.1"
 libloading = "0.8.1"
 libretro-sys = "0.1.1"
 parking_lot = "0.12.1"
+reqwest = { version = "0.11.24", features = ["blocking"] }
 rodio = { version = "0.17.3", default-features = false }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
 sha1 = "0.10.6"
 strum = { version = "0.26.1", features = ["derive"] }
+zip = "0.6.6"
 
 [target.'cfg(windows)'.build-dependencies]
 winres = "0.1.12"
